--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,47 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/drawer_layout"
     tools:context=".ui.HomeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rec_trade"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/trade_layout"
+            android:paddingTop="?attr/actionBarSize"
             />
 
-
-        <TextView
-            android:id="@+id/username_display"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tl_main"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rec_trade"
-            android:text="Hello"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/logout_home"
-            android:layout_below="@+id/username_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onlogoutclicked"
-            android:layout_marginBottom="20dp"
-            android:text="logout">
-
-        </Button>
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            android:minHeight="?attr/actionBarSize"
+            android:background="#0BC8B6"/>
 
     </RelativeLayout>
 
 
-</ScrollView>
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
