--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:id="@+id/drawer_layout"
     tools:context=".ui.HomeActivity">
 
@@ -12,12 +13,92 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/news"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Recent News"
+            android:textSize="24sp"
+            android:fontFamily="@font/acme"
+            android:layout_below="@+id/tl_main"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="6dp"
+            android:textColor="#000"
+            />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rc_news"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/news"
+            tools:listitem="@layout/news_layout"
+            android:layout_marginEnd="6dp"/>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#656161"
+            android:layout_below="@+id/rc_news"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"/>
+
+
+        <TextView
+            android:id="@+id/invest_headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trade"
+            android:textSize="24sp"
+            android:fontFamily="@font/acme"
+            android:layout_below="@+id/view"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="6dp"
+            android:textColor="#000"
+            />
+
+        <LinearLayout
+            android:id="@+id/ly_trade_head"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:layout_below="@+id/invest_headline">
+            <TextView
+                android:id="@+id/CryptoName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/acme"
+                android:text="Name"
+                android:textColor="#000"
+                android:textAlignment="center"
+                android:textSize="22sp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/Entry"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/acme"
+                android:text="Entry Point"
+                android:textSize="22sp"
+                android:textColor="#000"
+                android:textAlignment="center"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rec_trade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/trade_layout"
-            android:paddingTop="?attr/actionBarSize"
+            android:layout_below="@+id/ly_trade_head"
+            android:clipToPadding="false"
             />
 
         <androidx.appcompat.widget.Toolbar
@@ -26,9 +107,11 @@
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Light"
             android:minHeight="?attr/actionBarSize"
-            android:background="#0BC8B6"/>
+            android:background="#FF5722"/>
 
     </RelativeLayout>
+
+
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
