--- a/app/src/main/res/layout/trade_layout.xml
+++ b/app/src/main/res/layout/trade_layout.xml
@@ -11,47 +11,70 @@
             android:layout_marginTop="12dp"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            app:cardCornerRadius="8dp"
+            app:cardCornerRadius="12dp"
+            android:elevation="5dp"
             app:cardElevation="2dp"
             >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:weightSum="3">
-                <TextView
-                    android:id="@+id/bitcoin_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Name"
-                    android:textAlignment="center"
-                    android:textColor="#000"
-                    android:textSize="20sp"
-                    android:layout_weight="1"/>
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+               <LinearLayout
+                   android:id="@+id/bitName"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal"
+                   android:weightSum="2">
+                   <TextView
+                       android:id="@+id/bitcoin_name"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:fontFamily="@font/poppins_medium"
+                       android:text="Name"
+                       android:textAlignment="center"
+                       android:textSize="20sp"
+                       android:layout_weight="1"/>
 
-                <TextView
-                    android:id="@+id/entry_point"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Entry Point"
-                    android:textColor="#000"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:layout_weight="1"/>
-                <TextView
-                    android:id="@+id/timeUpdated"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Time"
-                    android:textColor="#000"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:layout_weight="1"/>
-            </LinearLayout>
+                   <TextView
+                       android:id="@+id/entry_point"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:fontFamily="@font/poppins_medium"
+                       android:text="Entry Point"
+                       android:textSize="20sp"
+                       android:textAlignment="center"
+                       android:layout_weight="1"/>
+
+               </LinearLayout>
+
+               <RelativeLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/bitName">
+                   <TextView
+                       android:id="@+id/update"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:fontFamily="@font/poppins_medium"
+                       android:text="Updated At:"
+                       android:textSize="16sp"
+                       android:textColor="#554C4C"
+                       android:layout_toStartOf="@+id/timeUpdated"
+                       />
+
+                   <TextView
+                       android:id="@+id/timeUpdated"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:fontFamily="@font/poppins_medium"
+                       android:text="Time"
+                       android:layout_alignParentEnd="true"
+                       android:textSize="16sp"
+                       android:layout_marginEnd="20dp"
+                       android:layout_marginStart="6dp"
+                        />
+               </RelativeLayout>
+           </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
 </LinearLayout>
