--- a/app/src/main/res/layout/trade_layout.xml
+++ b/app/src/main/res/layout/trade_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -14,6 +14,7 @@
             app:cardCornerRadius="12dp"
             android:elevation="5dp"
             app:cardElevation="2dp"
+            android:backgroundTint="#E6E2E0"
             >
 
            <RelativeLayout
